# zero_

./: .eslintrc.json  .gitignore  .prettierrc.json  API_EXAMPLES.md  ARCHITECTURE.md  COMPARISON.md  GRPC_GUIDE.md  LICENSE  PARALLEL-PERFORMANCE-TEST.md  PERFORMANCE-TEST.md  PERFORMANCE-TESTING.md  QUICK-START-MULTI-APP.md  QUICK_START.md  README.md  ROOT_README.md  TIMESTAMP-BEHAVIOR.md  benchmark-batch-validation.js  benchmark.js  clickhouse-config.xml  cluster.js  docker-compose.yml  env.optimizations.example  grpc-client-example.js  init-clickhouse.sql  jest.config.js  migrate-add-app-id.sql  nodemon.json  package-lock.json  package.json  performance-optimization-config.env  performance-test-parallel.js  performance-test-protobuf.js  performance-test-redis-batching.js  performance-test-single.js  performance-test.js  redis.conf  run-grpc.sh  run-http2.sh  run-http3.sh  run-redis-throughput-test.sh  (+16 more)
benchmark/: aggregate.js  benchmark-runner.js  debug-profile.js  generate-report.js  generate_report_table.js  monitor_pid.sh  populate_logs.js  run-performance-test.js  run_all.sh  run_cpp_only.sh  run_node.js  truncate.js
benchmark/http/: autocannon-runner.js
benchmark/lib/: PerformanceMonitor.js
benchmark/network/: http-benchmark.js  run-all.js
benchmark/proto_vs_json/: CMakeLists.txt
benchmark/proto_vs_json/src/: log-entry.pb.cc  log-entry.pb.h  main.cpp
benchmark/results/: 01-baseline.json  02-fire-and-forget.json  03-coalescing.json  04-full-pipeline.json  05-worker-threads.json  comparison.md  network-http1.1-intensive.json  network-http1.1-light.json  network-http2-intensive.json  network-http2-light.json
benchmark/stages/: 01-baseline.js  (+4 more)
benchmark_results/: cpp_stats.csv  node_stats.csv
cpp-ingester/: CMakeLists.txt  README.md
cpp-ingester/benchmark/: compare.sh
cpp-ingester/src/: clickhouse_writer.cpp  clickhouse_writer.h  config.cpp  config.h  log_entry.h  main.cpp  redis_consumer.cpp  redis_consumer.h  ring_buffer.h
docker/: Dockerfile  docker-compose.yml
measurements/: test_20251230_134905.txt  test_20251230_134943.txt
minimal-platform/: README.md  docker-compose.yml  package.json  test-example.js
performance/: load-test-grpc.sh  load-test-http1.sh  load-test-http2.sh
performance-results/: test_20251112_165950.txt
proto/: README.md  logs.proto
scripts/: setup-clickhouse.js  setup-clickhouse.sql  setup-mongodb.js
src/: app-http2.js  app-http3.js  app.js
(+221 files in other folders)
